<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.puzzledroid.Game01Activity">

    <item
        android:id="@+id/musicOnOff"
        android:orderInCategory="100"
        android:title="@string/music_off"
        app:showAsAction="never" />
    <item
        android:id="@+id/nextSong"
        android:orderInCategory="100"
        android:title="@string/next_song"
        app:showAsAction="never" />
    <item
        android:id="@+id/reset_game"
        android:orderInCategory="100"
        android:title="@string/reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings_game"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never" />

</menu>